# outlab5-Kids-Next-Door

q4/P1/: prime.py
q4/P2/: choice.py
q4/P3/: analysis.py  convert.py  merge.py
q4/P4/: menu.py  menuitem.py  setmenu.py
q4/P5/: parse.py  update.py
q4/P6/: teams.py  transfer.py
q4/P7/: inc.py  use_inc.py
q5/q5/: Makefile
q6/: CMakeLists.txt
q6/q6/: rawmake
q6/q6/mygame/: CMakeLists.txt
